--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </p>
       </div>
       <div class="md:grid md:grid-cols-2 lg:grid-cols-4 gap-4 p-4">
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/apartment.jpg"
@@ -165,7 +165,7 @@
             <p>203 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/newyork2.jpg"
@@ -178,7 +178,7 @@
             <p>22 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/chicago.jpg"
@@ -191,7 +191,7 @@
             <p>150 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/losangeles.jpg"
@@ -204,7 +204,7 @@
             <p>175 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/sanfransisco.jpg"
@@ -217,7 +217,7 @@
             <p>142 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/orlando.jpg"
@@ -230,7 +230,7 @@
             <p>163 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/miami.jpg"
@@ -243,7 +243,7 @@
             <p>99 properties</p>
           </div>
         </div>
-        <div class="flex items-center border-slate-400 border rounded-lg">
+        <div class="flex items-center border-slate-400 border rounded-lg mb-4">
           <div class="h-full w-full">
             <img
               src="./images/atlanta.jpg"
@@ -268,7 +268,7 @@
       </div>
       <div class="md:grid md:grid-cols-3 gap-4 p-4">
         <div
-          class="flex rounded-lg flex-col border border-gray-300 relative group"
+          class="flex rounded-lg flex-col border border-gray-300 relative group mb-4"
         >
           <img
             src="./images/bedroom.jpg"
@@ -315,7 +315,7 @@
           </div>
         </div>
         <div
-          class="flex rounded-lg flex-col border border-gray-300 relative group"
+          class="flex rounded-lg flex-col border border-gray-300 relative group mb-4"
         >
           <img
             src="./images/apartment.jpg"
@@ -362,7 +362,7 @@
           </div>
         </div>
         <div
-          class="flex rounded-lg flex-col border border-gray-300 relative group"
+          class="flex rounded-lg flex-col border border-gray-300 relative group mb-4"
         >
           <img
             src="./images/office.jpg"
@@ -407,7 +407,7 @@
           </div>
         </div>
         <div
-          class="flex rounded-lg flex-col border border-gray-300 relative group"
+          class="flex rounded-lg flex-col border border-gray-300 relative group mb-4"
         >
           <img
             src="./images/studio.jpg"
@@ -454,7 +454,7 @@
           </div>
         </div>
         <div
-          class="flex rounded-lg flex-col border border-gray-300 relative group"
+          class="flex rounded-lg flex-col border border-gray-300 relative group mb-4"
         >
           <img
             src="./images/bedroom.jpg"
@@ -501,7 +501,7 @@
           </div>
         </div>
         <div
-          class="flex rounded-lg flex-col border border-gray-300 relative group"
+          class="flex rounded-lg flex-col border border-gray-300 relative group mb-4"
         >
           <img
             src="./images/bedroom.jpg"
